--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/mdx": "^14.2.14",
     "next": "14.2.14",
+    "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
